2008-05-21  Christian Kellner  <gicmo@gnome.org>

	* configure.ac:
	Check for gphoto2 versions greaten then 2.4.0. Patch from 
	Tom Parker <palfrey@tevp.net>. Fixes #531702

2008-05-20  Christian Kellner  <gicmo@gnome.org>

	* configure.ac:
	* programs/Makefile.am:
	Allow to disable the installation of the bash completion
	scripts. Also make it possible to choose the directory
	where the file gets installed. Fixes #530772

2008-05-20  Bastien Nocera  <hadess@hadess.net>

	* daemon/gvfsbackendobexftp-fl-parser.c (fl_parser_fill_file_info):
	Fill in the display name, even if layers above should be able to do
	without (Closes: #523699)

2008-05-11  Hans Petter Jansson  <hpj@novell.com>

	* client/gvfsfusedaemon.c: Fix erroneous copyright header and
	provide a better description of the source file.

2008-05-09  Federico Mena Quintero  <federico@novell.com>

	http://bugzilla.gnome.org/show_bug.cgi?id=532375 - Fix strdup() /
	g_free() confusion.

	* hal/hal-device.c (hal_device_new_from_udi_and_properties):
	g_strdup() the UDI.  We can't just steal it, since it comes from
	libhal, which uses strdup() (and we do g_free() in our finalizer).

	* hal/hal-pool.c (hal_pool_new): Free the actual device strings here.

2008-04-22  Benjamin Otte  <otte@gnome.org>

	* */*.[ch]: get rid of modelines
	The modelines were inconsistent and caused issues when used in 
	different editors.

2008-04-21  Sebastien Bacher  <seb128@ubuntu.com>

	* daemon/gvfsbackendftp.c: (do_enumerate_directory): 
	remove trailing '\r', that workarounds a parser issue causing 
	some filenames to not be listed (#524880)

2008-04-21  Matthias Clasen  <mclasen@redhat.com>

	* client/gdaemonvfs.c:
	* hal/hal-pool.c: Set exit-on-disconnect to FALSE on private
	dbus connections to prevent unexpected exits.  (#528785)

2008-04-21  David Zeuthen  <davidz@redhat.com>

	* client/gvfsfusedaemon.c: Fix some reference issues, see
	http://mail.gnome.org/archives/gvfs-list/2008-April/msg00017.html
